
v6.5
(xx/03/18)

Changes / Improvements / Optimizations:

Bug Fixes:
DietPi-Drive_Manager | Resolved an issue where x-systemd.automount would fail if autofs4 was disabled in kernel/modules (eg: Rock64). x-systemd.automount is now disabled for systems which fail autofs4 detection: https://github.com/Fourdee/DietPi/issues/1607
DietPi-Software | PineA64: Resolved issue with failure to run fbturbo driver on Debian Stretch: https://github.com/Fourdee/DietPi/issues/1604

-----------------------------------------------------------------------------------------------------------

v6.4 - HotFix
(09/03/18)

Changes / Improvements / Optimizations:
DietPi-Cron | Added ability to set minutely based cron jobs (eg: every 3 minutes), using /etc/cron.minutely. Many thanks to @d5c0d3 for adding this feature: https://github.com/Fourdee/DietPi/pull/1578
DietPi-Software | UrBackupServer: Updated to latest version 2.2.8: https://github.com/Fourdee/DietPi/issues/1600

Bug Fixes:
General | Resolved an issue with dietpi user password, being reset during patch, due to set_core_environment: https://github.com/Fourdee/DietPi/issues/1592
General | Resolved issues with swapfile being disabled by default due to image bug. To resolve existing installations with 0 swapfile, swapfile will be forcefully re-created during this patch for all systems, with automatic size (2GB-RAM): https://github.com/Fourdee/DietPi/issues/1593#issuecomment-371516418
General | Resolved incorrect scaling with G_WHIP_VIEWLOG: http://dietpi.com/phpbb/viewtopic.php?f=9&t=2882&p=11317#p11317
General | Resolved issues with G_AGDUG missing the additional distro specific command line options: https://github.com/Fourdee/DietPi/issues/1594
General | Resolved an issue with DietPi-RAMdisk/log, where /var/tmp/dietpi/logs would not be generated if removed, causing the service to fail: http://dietpi.com/phpbb/viewtopic.php?f=11&t=1148&p=11322#p11322