@@ -53,7 +53,7 @@ AUTO_SETUP_NET_ETH_FORCE_SPEED=0
 
 ##### Misc Options #####
 
-#	Size of dphys-swapfile to generate (MB)
+#	Size of swapfile to generate (MB)
 #		0=Disabled | 1=auto (2GB-RAM = size) | 2+=manual
 AUTO_SETUP_SWAPFILE_SIZE=1
 
