@@ -427,6 +427,9 @@
 
 		local drivepath_no_partitions=$(Return_Drive_Without_Partitions ${aDRIVE_MOUNT_SOURCE[$INDEX_DRIVE_BEING_EDITED]})
 
+		# - disable swap
+		/DietPi/dietpi/func/dietpi-set_dphys-swapfile 0 /var/swap
+
 		# - Unmount drive
 		umount ${aDRIVE_MOUNT_SOURCE[$INDEX_DRIVE_BEING_EDITED]}
 
@@ -511,6 +514,9 @@
 
 		FORMAT_COMPLETED=1
 		FORMAT_PREVIOUS_MOUNT_SOURCE=${aDRIVE_MOUNT_SOURCE[$INDEX_DRIVE_BEING_EDITED]}
+
+		# - enable swap
+		/DietPi/dietpi/func/dietpi-set_dphys-swapfile 1 /var/swap
 
 		Init_Drives_and_Refresh
 
@@ -1109,9 +1115,6 @@
 		TARGETMENUID=2
 
 		FORMAT_COMPLETED=0
-
-		# - disable swap
-		/DietPi/dietpi/func/dietpi-set_dphys-swapfile 0 /var/swap
 
 		local partition_table_text='MBR'
 		if (( $FORMAT_GPT )); then
