@@ -339,10 +339,6 @@ _EOF_
 			#Never run this in future patches!!! : https://github.com/Fourdee/DietPi/issues/1592
 			#/DietPi/dietpi/func/dietpi-set_core_environment
 			#-------------------------------------------------------------------------------
-			#Re-Apply swap to set /tmp tmpfs size: https://github.com/Fourdee/DietPi/issues/1027#issuecomment-369435049
-			# + Force auto swapfile size https://github.com/Fourdee/DietPi/issues/1593#issuecomment-371516418
-			/DietPi/dietpi/func/dietpi-set_dphys-swapfile 1
-			#-------------------------------------------------------------------------------
 			#Service updates: http://dietpi.com/phpbb/viewtopic.php?f=11&t=1148&p=11322#p11322
 			$(which mkdir) -p /var/tmp/dietpi/logs
 			cat << _EOF_ > /etc/systemd/system/dietpi-ramdisk.service
@@ -424,6 +420,27 @@ _EOF_
 			#-------------------------------------------------------------------------------
 			#Rerun drive manager to remove x-systemd.automount if autofs4 module not found: https://github.com/Fourdee/DietPi/issues/1607
 			/DietPi/dietpi/dietpi-drive_manager 2
+			#-------------------------------------------------------------------------------
+			#Removal of dphys-swapfile, switch to our own swapfile control system: https://github.com/Fourdee/DietPi/issues/1602
+			SWAPFILE_SIZE=0
+			SWAPFILE_LOCATION='/var/swap'
+			if [ -f /etc/dphys-swapfile ]; then
+
+				SWAPFILE_SIZE=$(grep -m1 '^CONF_SWAPSIZE=' /etc/dphys-swapfile | sed 's/.*=//')
+				SWAPFILE_LOCATION=$(grep -m1 '^CONF_SWAPFILE=' /etc/dphys-swapfile | sed 's/.*=//')
+
+			fi
+
+			cat << _EOF_ > /var/lib/dietpi/swap.conf
+SWAPFILE_SIZE=$SWAPFILE_SIZE
+SWAPFILE_LOCATION=$SWAPFILE_LOCATION
+_EOF_
+
+			#Re-Apply swap to set /tmp tmpfs size: https://github.com/Fourdee/DietPi/issues/1027#issuecomment-369435049
+			# + Force auto swapfile size https://github.com/Fourdee/DietPi/issues/1593#issuecomment-371516418
+			/DietPi/dietpi/func/dietpi-set_dphys-swapfile 1
+
+			G_AGP dphys-swapfile
 			#-------------------------------------------------------------------------------
 
 		fi
