@@ -5,6 +5,7 @@ v6.5
 Changes / Improvements / Optimizations:
 
 Bug Fixes:
+General | dphys-swapfile: Has been removed and replace with our own swapfile generation system. Uses fallocate to quickly create the swapfile of any size (1-2 seconds): https://github.com/Fourdee/DietPi/issues/1602
 DietPi-Drive_Manager | Resolved an issue where x-systemd.automount would fail if autofs4 was disabled in kernel/modules (eg: Rock64). x-systemd.automount is now disabled for systems which fail autofs4 detection: https://github.com/Fourdee/DietPi/issues/1607
 DietPi-Software | PineA64: Resolved issue with failure to run fbturbo driver on Debian Stretch: https://github.com/Fourdee/DietPi/issues/1604
 
